cluster/apps/home/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app nextcloud
  namespace: home
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
      app.kubernetes.io/instance: *app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
        app.kubernetes.io/instance: *app
    spec:
      containers:
        - name: nextcloud
          image: lscr.io/linuxserver/nextcloud:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: nextcloud-config-volume
              mountPath: /config/www/nextcloud
            - name: nextcloud-data-volume
              mountPath: /data
          resources:
            requests:
              cpu: 200m
              memory: 300Mi
            limits:
              cpu: 300m
              memory: 500Mi
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
        - name: nextcloud-config-volume
          hostPath:
            path: /home/elraro/home-ops/volumes/nextcloud/nextcloud-config-volume
        - name: nextcloud-data-volume
          hostPath:
            path: /mnt/sdc1/nextcloud/data
